--- a/legs_103.html
+++ b/legs_103.html
@@ -103,81 +103,161 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Romanian Dumbbell Deadlifts X Calf Raises</div>
-            <div class="card-body text-center">
-              <img src="romanian_deadlift_db.jpg" class="img-fluid" alt="Responsive image">
-              <img src="calf_raise_standing.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(5 sets | 15x15, 12x12, 12x12, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 5 sets. Keep the weight the same throughout all 5 sets. Perform the deadlifts first followed by the calf raises.</p>
-              <p><u>Form</u>: For deadlifts, stand with a neutral stance. Bend over at the hips with an arched back in order to pick up the dumbbells. Lean back slightly with the legs but keep them at about an 80 degree angle. Using the hamstrings and glutes, bring the bar up until you are standing straight. Lower the bar back down to the floor.</p>
-              <p>For the calf raises, stand on an elevated surface so that your heels are hanging off the step, lower your heels so that it stretches the calves. Flex your calves and move so that you’re standing on your tippy-toes to contract the calves. Lower yourself slowly back to the starting position.</p>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Romanian Dumbbell Deadlifts X Calf Raises</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="romanian_deadlift_db.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="calf_raise_standing.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 sets | 15x15, 12x12, 12x12, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 5 sets. Keep the weight the same throughout all 5 sets. Perform the deadlifts first followed
+              by the calf raises.</p>
+            <p class="card-text"><u>Form</u>: For deadlifts, stand with a neutral stance. Bend over at the hips with an arched back in order to pick up
+              the dumbbells. Lean back slightly with the legs but keep them at about an 80 degree angle. Using the hamstrings and
+              glutes, bring the bar up until you are standing straight. Lower the bar back down to the floor.</p>
+            <p class="card-text">For the calf raises, stand on an elevated surface so that your heels are hanging off the step, lower your heels so that
+              it stretches the calves. Flex your calves and move so that you’re standing on your tippy-toes to contract the calves.
+              Lower yourself slowly back to the starting position.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Squats</div>
-            <div class="card-body text-center">
-              <img src="squats.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(6 sets | 12, 12, 10, 10, 4-4, 4-4)</i></p>
-              <p><u>Info</u>: There will be 6 sets. Focus on control and depth. Every 2 sets, increase the weight 10-15% and decrease the repetitions. For the final 2 sets, split the set into 2 parts of 4 repetitions with a 20 second break in between.</p>
-              <p><u>Form</u>: Place your feet just outside of a normal standing position. Point your toes at about a 30 degree angle outward. With an arch in your back, sit back so that the bar travels in a straight line as you squat. Lower yourself all the way until your glutes nearly touch your ankles. Make sure that your heels do not come off the ground and that you stay flat footed. Push through your heels to bring yourself back upward.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Squats</div>
+          <img class="card-img-top" src="squats.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(6 sets | 12, 12, 10, 10, 4-4, 4-4)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 6 sets. Focus on control and depth. Every 2 sets, increase the weight 10-15%
+              and decrease the repetitions. For the final 2 sets, split the set into 2 parts of 4 repetitions with a 20 second break
+              in between.</p>
+            <p class="card-text"><u>Form</u>: Place your feet just outside of a normal standing position. Point your toes at about a 30 degree angle
+              outward. With an arch in your back, sit back so that the bar travels in a straight line as you squat. Lower yourself
+              all the way until your glutes nearly touch your ankles. Make sure that your heels do not come off the ground and that
+              you stay flat footed. Push through your heels to bring yourself back upward.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Barbell Lunges X Barbell Good Mornings</div>
-            <div class="card-body text-center">
-              <img src="lunges_bb.jpg" class="img-fluid" alt="Responsive image">
-              <img src="good_morning_bb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 12x12, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Start with a weight you can focus on control for higher repetitions. Keep the weight constant throughout. Perform the barbell lunges first and the good mornings immediately after.</p>
-              <p><u>Form</u>: For lunges, with a barbell on your back, take one step back so that you are able to lower yourself so that your back knee touches the ground. Step back far enough so that your shin stays straight. Using your quads, return yourself so that both feet are next to each other. Repeat on the other leg to complete one rep.</p>
-              <p>For good mornings, keep the barbell on your back. Lean forward, bending at the hips and keeping your legs at about an 80 degree angle, until your torso is about parallel with the ground. Keep your back arched and then return to the starting position.</p>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Barbell Lunges X Barbell Good Mornings</div>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="lunges_bb.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="good_morning_bb.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 12x12, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Start with a weight you can focus on control for higher
+              repetitions. Keep the weight constant throughout. Perform the barbell lunges first and the good mornings immediately
+              after.</p>
+            <p class="card-text"><u>Form</u>: For lunges, with a barbell on your back, take one step back so that you are able to lower yourself so
+              that your back knee touches the ground. Step back far enough so that your shin stays straight. Using your quads, return
+              yourself so that both feet are next to each other. Repeat on the other leg to complete one rep.</p>
+            <p class="card-text">For good mornings, keep the barbell on your back. Lean forward, bending at the hips and keeping your legs at about an
+              80 degree angle, until your torso is about parallel with the ground. Keep your back arched and then return to the
+              starting position.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Leg Press X Leg Extensions</div>
-            <div class="card-body text-center">
-              <img src="leg_press_narrow.jpeg" class="img-fluid" alt="Responsive image">
-              <img src="leg_extension.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 12x12, 12x12, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Keep the weight constant throughout. Perform the leg press immediately followed by the leg extensions. For each exercise, focus on a 1-count up and a 3-count negative.</p>
-              <p><u>Form</u>: For the leg press, place your feet on the upper part of the platform with a narrow stance. Lower the weight until your knees touch your chest. Pushing through your heels, return the weight so that your legs are straight. Make sure your feet are pointing straight up put that your knees don’t cave inward.</p>
-              <p>For the extensions, sit in the chair and place the bad so it is just above your ankles on your shins. Use the handles to keep yourself touching the seat at all times and sit so that the seat ends slightly before the backs of your kneecaps. Extend your legs until your legs are completely straight then slowly lower the weight back to the starting position.</p>
+        <div class="card">
+          <div class="card-header text-center h5">Leg Press X Leg Extensions</div>
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="leg_press_narrow.jpeg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="leg_extension.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 12x12, 12x12, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Keep the weight constant throughout. Perform the leg press
+              immediately followed by the leg extensions. For each exercise, focus on a 1-count up and a 3-count negative.</p>
+            <p class="card-text"><u>Form</u>: For the leg press, place your feet on the upper part of the platform with a narrow stance.
+              Lower the weight until your knees touch your chest. Pushing through your heels, return the weight so that your legs are
+              straight. Make sure your feet are pointing straight up put that your knees don’t cave inward.</p>
+            <p class="card-text">For the extensions, sit in the chair and place the bad so it is just above your ankles on your shins.
+              Use the handles to keep yourself touching the seat at all times and sit so that the seat ends slightly before the backs of
+              your kneecaps. Extend your legs until your legs are completely straight then slowly lower the weight back to the starting
+              position.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Seated Calf Raises</div>
-            <div class="card-body text-center">
-              <img src="calf_raise_sitting.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 12, 12, 10, 8)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Start with a weight you can focus on control for higher repetitions. After 2 sets, increase the weight 15-20% and lower the repetitions. For the last set, keep the weight the same and perform less repetitions.</p>
-              <p><u>Form</u>: Sit at a calf raise machine and place your feet so that your heels are hanging off the step, lower your heels so that it stretches the calves. Flex your calves and move so that you’re standing on your tippy-toes to contract the calves. Lower yourself slowly back to the starting position.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">Seated Calf Raises</div>
+          <img class="card-img-top" src="calf_raise_sitting.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 12, 12, 10, 8)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Start with a weight you can focus on control for higher
+              repetitions. After 2 sets, increase the weight 15-20% and lower the repetitions. For the last set, keep the weight the
+              same and perform less repetitions.</p>
+            <p class="card-text"><u>Form</u>: Sit at a calf raise machine and place your feet so that your heels are hanging off the step,
+              lower your heels so that it stretches the calves. Flex your calves and move so that you’re standing on your tippy-toes to
+              contract the calves. Lower yourself slowly back to the starting position.</p>
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
