--- a/login.html
+++ b/login.html
@@ -120,7 +120,7 @@
                   <label class="form-check-label" for="exampleCheck1">Remember me</label>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-primary" id="logINButton">Log in</button><br>
+                  <button type="reset" class="btn btn-primary" href="#" id="logINButton">Log in</button><br>
                   <a class="btn btn-link text-dark" href="#" role="button">Forgot Password?</a><br>
                 </div>
               </form>
