--- a/shoulders_102.html
+++ b/shoulders_102.html
@@ -103,68 +103,141 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Seated Dumbbell Shoulder Press X Shrugs</div>
-            <div class="card-body text-center">
-              <img src="shoulder_press_seated_db.jpg" class="img-fluid" alt="Responsive image">
-              <img src="shrugs_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(5 sets | 15x15, 12x12, 10x10, 12x12, 15x15)</i></p>
-              <p><u>Info</u>: There will be 5 sets. Increase weight for both exercise the first 3 sets and decrease the weight back down the last 3 (pyramid). Increase/decrease the weight 5-10%.</p>
-              <p><u>Form</u>: For the shoulder press, keep an arched back sitting straight up, bring the dumbbells up so that they are straight above you with a straight arm. Bend your elbows outward until your elbows are just under a 90 degree angle and then press the weights back up so that they touch above your head.</p>
-              <p>For the shrugs, grab two dumbells and hold them at your sides. With a straight arm, shrug your shoulders upward and slightly backward to focus the traps. Hold them at the top and the lower your shoulders slowly.</p>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Seated Dumbbell Shoulder Press X Shrugs</div>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="shoulder_press_seated_db.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="shrugs_db.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 sets | 15x15, 12x12, 10x10, 12x12, 15x15)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 5 sets. Increase weight for both exercise the first 3 sets and decrease
+              the weight back down the last 3 (pyramid). Increase/decrease the weight 5-10%.</p>
+            <p class="card-text"><u>Form</u>: For the shoulder press, keep an arched back sitting straight up, bring the dumbbells up
+              so that they are straight above you with a straight arm. Bend your elbows outward until your elbows are just under a
+              90 degree angle and then press the weights back up so that they touch above your head.</p>
+            <p class="card-text">For the shrugs, grab two dumbells and hold them at your sides. With a straight arm, shrug your
+              shoulders upward and slightly backward to focus the traps. Hold them at the top and the lower your shoulders
+              slowly.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header text-center h5">Cable Lateral Raises X Cable Rear Delt Raises</div>
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="lateral_raise_cb.jpeg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="rear_lateral_raise_cb.jpg" alt="Second slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
+            <p class="card-text"><u>Info</u>:  There will be 4 sets. Focus . Perform the lateral raises followed by the rear delt
+              raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.</p>
+            <p class="card-text"><u>Form</u>: For the lateral raises, grab the handle on the cable machine (one side at a time) and
+              hold it at your sides. With a straight arm, raise the handle to your sides until your body forms half a “T” shape and
+              then lower the handle slowly to the starting position.</p>
+            <p class="card-text">For the rear lateral raises, bend over so your torso is parallel with the ground. Grip the handle at
+              the bottom of the cables. With straight arms, extend them out to your sides so that at the top your arm is straight and
+              are parallel with the ground and perpendicular with your body.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Cable Lateral Raises X Cable Rear Delt Raises</div>
-            <div class="card-body text-center">
-              <img src="lateral_raise_cb.jpeg" class="img-fluid" alt="Responsive image">
-              <img src="rear_lateral_raise_cb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
-              <p><u>Info</u>:  There will be 4 sets. Focus . Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.</p>
-              <p><u>Form</u>: For the lateral raises, grab the handle on the cable machine (one side at a time) and hold it at your sides. With a straight arm, raise the handle to your sides until your body forms half a “T” shape and then lower the handle slowly to the starting position.</p>
-              <p>For the rear lateral raises, bend over so your torso is parallel with the ground. Grip the handle at the bottom of the cables. With straight arms, extend them out to your sides so that at the top your arm is straight and are parallel with the ground and perpendicular with your body.</p>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Dumbbell Lateral Raise X Dumbbell Rear Lateral Raise</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="lateral_raise_db.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="rear_lateral_raise_db.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral
+              raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease
+              the repetitions.</p>
+            <p class="card-text"><u>Form</u>: For the lateral raises, grab two dumbbells and hold them at your sides. With straight
+              arms, raise the dumbbells to your sides until your body forms a “T” shape and then lower the dumbbells slowly to the
+              starting position.</p>
+            <p class="card-text">For the rear lateral raises, bend over so your torso is parallel with the ground. Let the dumbbells
+              dead hang in front of you. With straight arms, extend them out to your sides so that at the top your arms are
+              straight and are parallel with the ground and perpendicular with your body.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header text-center h5">Face Pull</div>
+          <img class="card-img-top" src="face_pulls.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral
+              raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the
+              repetitions.</p>
+            <p class="card-text"><u>Form</u>: Place the cables so they are eye level with you. With a rope attachment, pull the handles
+               toward your forehead and separate your hands as it begins to come toward you. Keep your upper arms parallel to the
+                ground and make a double-bicep flex motion with your upper arms.</p>
           </div>
         </div>
       </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Dumbbell Lateral Raise X Dumbbell Rear Lateral Raise</div>
-            <div class="card-body text-center">
-              <img src="lateral_raise_db.jpg" class="img-fluid" alt="Responsive image">
-              <img src="rear_lateral_raise_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.</p>
-              <p><u>Form</u>: For the lateral raises, grab two dumbbells and hold them at your sides. With straight arms, raise the dumbbells to your sides until your body forms a “T” shape and then lower the dumbbells slowly to the starting position.</p>
-              <p>For the rear lateral raises, bend over so your torso is parallel with the ground. Let the dumbbells dead hang in front of you. With straight arms, extend them out to your sides so that at the top your arms are straight and are parallel with the ground and perpendicular with your body.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Face Pull X Shrugs</div>
-            <div class="card-body text-center">
-              <img src="face_pulls.jpg" class="img-fluid" alt="Responsive image">
-              <img src="shrugs_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.</p>
-              <p><u>Form</u>: For the face pulls, place the cables so they are eye level with you. With a rope attachment, pull the handles toward your forehead and separate your hands as it begins to come toward you. Keep your upper arms parallel to the ground and make a double-bicep flex motion with your upper arms.</p>
-              <p>For the shrugs, grab two dumbells and hold them at your sides. With a straight arm, shrug your shoulders upward and slightly backward to focus the traps. Hold them at the top and the lower your shoulders slowly.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
+    
 </html>
