--- a/home_tangerine.html
+++ b/home_tangerine.html
@@ -92,21 +92,18 @@
       <div>
         <br>
         <h1 align="center">Tangerine Fit</h1><br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-          laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Tangerine Fit ™ is the one fitness site to cater to every person for every fitness goal! The unique workouts
+          are tailored for different skill levels and different end goals to ensure that no other site will be needed!</p>
+        <p>In order to get started, click on any of our three tabs to achieve your fitness goals.</p>
+        <p>Our weightlifting section will help to build muscle and strength simultaneously so that you get the most
+          out of your time in the weightroom.</p>
+        <p>Our cardio section will help you increase your cardiovascular health while helping you to stay conditioned
+          or burn fat!</p>
+        <p>Our High Intensity Interval Training (HIIT) section will help you build strength or burn fat while giving
+          you a crazy workout!</p><br>
+        <p class="text-center h5 text-primary">Tangerine Fit™ is your one stop workout spot!</p>
       </div>
-    </div><br><br><br><br><br>
+    </div><br><br><br><br>
     <!-- FOOTER -->
     <footer class="page-footer font-small" style="background-color: #fd7e14;">
       <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
